# khushu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
assets/: adkar.json  com.github.sniper1720.khushu.metainfo.xml  io.github.sniper1720.khushu.metainfo.xml  khushu.desktop  khushu.gresource.xml
packaging/arch/: PKGBUILD
packaging/flatpak/: com.github.sniper1720.khushu.yml  io.github.sniper1720.khushu.yml
packaging/snap/: snapcraft.yaml
po/: ar.mo  ar.po  es.mo  es.po  fr.mo  fr.po  gtk40.ar.po  gtk40.es.po  gtk40.fr.po  gtk40.pot  gtk40.tr.po  khushu.pot  libadwaita.ar.po  libadwaita.es.po  libadwaita.fr.po  libadwaita.pot  libadwaita.tr.po  tr.mo  tr.po
src/: adkar.rs  audio.rs  autostart.rs  background.rs  background_tasks.rs  calendar.rs  config.rs  home_ui.rs  i18n.rs  location.rs  main.rs  nav_ui.rs  notifications.rs  pages.rs  qibla.rs  qibla_ui.rs  security.rs  settings_ui.rs  time.rs  timer_controller.rs  welcome.rs
